--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="trans">#00FFFFFF</color>
+    <color name="darkBlue">#004b7a</color>
+    <color name="lightBlue">#7baab8</color>
+    <color name="lightGray">#1A000000</color>
 </resources>
