Feat (home screen) - Adapter added - new Util funcs added

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -82,6 +82,7 @@
             <LinearLayout
                 android:id="@+id/dataContainer"
                 android:visibility="gone"
+                tools:visibility="visible"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
