--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,6 +14,7 @@
     <ImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:id="@+id/image"
         tools:src="@drawable/ic_cloud"/>
 
     <TextView
@@ -22,12 +23,14 @@
         android:textSize="20sp"
         android:layout_marginTop="20dp"
         tools:text="Day1"
+        android:id="@+id/dayName"
         android:textColor="@color/white"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="75"
+        android:id="@+id/temp"
         android:layout_marginTop="5dp"
         android:textColor="@color/white"/>
 
